gcc/testsuite/rust/rustc/ui/recursion_limit/invalid_digit_type_dg.rs
#![recursion_limit = 123] // { dg-error "" "" { target *-*-* } }

fn main() {}

